basic steps from David lecture

--- a/Phonebill2/app/src/main/res/values/strings.xml
+++ b/Phonebill2/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Phonebill</string>
+    <string name="hello">Hello Again Advanced Programming with Java!</string>
 </resources>
