--- a/Phonebill2/app/src/main/res/values/strings.xml
+++ b/Phonebill2/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Phonebill</string>
     <string name="hello">Hello Again Advanced Programming with Java!</string>
+    <string name="click_me">Click me</string>
 </resources>
