Start over the project 5

--- a/phonebill-android/app/src/main/res/values/strings.xml
+++ b/phonebill-android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">phonebill-android</string>
+    <string name="hello">Welcome to Phone Bill App!</string>
+    <string name="help">Help</string>
 </resources>
