--- a/phonebill-android/app/src/main/res/values/strings.xml
+++ b/phonebill-android/app/src/main/res/values/strings.xml
@@ -7,5 +7,14 @@
     <string name="add_new_phone_call">Add new Phone Call</string>
     <string name="search_phone_calls">Search Phone Calls</string>
     <string name="create_new_phone_bill">Create New Phone Bill</string>
+    <string name="enter_customer_name">Enter Customer Name</string>
+    <string name="enter_caller_number">Enter Caller Number</string>
+    <string name="enter_customername">Enter Customer name</string>
+    <string name="caller_number">Enter Caller Number</string>
+    <string name="enter_callee_number">Enter Callee Number</string>
+    <string name="enter_begin_date">Enter begin date</string>
+    <string name="enter_end_date">Enter end date</string>
+    <string name="enter_end_time">Enter end time</string>
+    <string name="enter_begin_time">Enter begin time</string>
 
 </resources>
