Launch The Add_New_Call

--- a/phonebill-android/app/src/main/res/values/strings.xml
+++ b/phonebill-android/app/src/main/res/values/strings.xml
@@ -20,5 +20,7 @@
     <string name="return_to_menu">Return to Menu</string>
     <string name="create">Create</string>
     <string name="enter_caller">Enter Caller Number</string>
+    <string name="enter_name_to_search">Enter Name to Search</string>
+    <string name="search">Search</string>
 
 </resources>
