Add display for pretty print

--- a/phonebill-android/app/src/main/res/values/strings.xml
+++ b/phonebill-android/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="search">Search</string>
     <string name="add_new_call">Add New Call</string>
     <string name="createcall">Create</string>
+    <string name="search_customer_by_name">Search Customer by Name</string>
 
 
 </resources>
